--- a/style.css
+++ b/style.css
@@ -176,3 +176,22 @@ section{
     box-shadow: 0px 10px 25px 10px rgba(9, 132, 206, 40%);
 }
 
+/* Services Section*/
+
+.service-box {
+    transition: all .40s;
+    -webkit-transition: all .40s;
+    -moz-transition: all .40s;
+    -ms-transition: all .40s;
+    -o-transition: all .40s;
+}
+
+.service-box:hover{
+    background-image: linear-gradient(-45deg, #2763b8 0%, #2232dd 100%);
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    padding: 20px 0;
+}
