--- a/style.css
+++ b/style.css
@@ -195,3 +195,21 @@ section{
     -o-border-radius: 7px;
     padding: 20px 0;
 }
+
+/*Portfolio Section*/
+
+#portfolio img{
+    width: 100%;
+    height: 350px;
+    cursor: pointer;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    object-fit: cover;
+}
+
+#gallery-modal .modal-img{
+    width: 100%;
+}
