--- a/style.css
+++ b/style.css
@@ -213,3 +213,21 @@ section{
 #gallery-modal .modal-img{
     width: 100%;
 }
+
+/*CONTACT SECTION*/
+
+.contact-bg{
+    background-color: var(--secondColor);
+    height: 70vh;
+    padding: 50px;
+}
+
+form input,textarea{
+    color: var(--textColor)!important;
+    background-color: var(--primaryColor)!important;
+    border: 3px solid var(--gray)!important;
+}
+
+.form-control::placeholder{
+    color: rgba(231, 230, 230, 0.4);
+}
